# funsearch

./: .gitignore  README.md  pyproject.toml  run.ps1  run.py
.sisyphus/drafts/: funsearch-lite-results-viz-visibility.md
.sisyphus/plans/: funsearch-binpacking.md
configs/: binpacking.yaml  binpacking_deepseek.yaml  binpacking_openai.yaml  temp_run.yaml
docs/: ARCHITECTURE.md  HANDOFF.md  IMPROVEMENT_CHECKLIST.md  INNOVATION_POINTS.md  METRICS.md  READING_REPORTS.md  RUNNING_EXPERIMENTS.md  SANDBOX_LIMITATIONS.md  USAGE.md  初步计划.md  课程作业要求.txt
evaluator/: __init__.py  base.py  bin_packing.py  datasets.py  heuristics.py
experiments/: __init__.py  artifacts.py  cli.py  compare.py  config.py  failure_taxonomy.py  metrics.py  plotting.py  report.py  runner.py  summary.py
funsearch_core/: __init__.py  deduplication.py  diversity.py  islands.py  loop.py  population.py  schemas.py  selection.py
llm/: __init__.py  base.py  cache.py  prompts.py  providers.py  retry.py
sandbox/: README.md  __init__.py  executor.py  policy.py  protocol.py
store/: __init__.py  database.py  repository.py
tests/: __init__.py  test_cli_variant.py  test_compare_runs.py  test_deduplication.py  test_evaluator.py  test_experiments.py  test_funsearch_core.py  test_imports.py  test_llm.py  test_llm_metrics.py  test_metrics_schema.py  test_observability.py  test_plot_generation.py  test_report_generation.py  test_runner_p0.py  test_runner_p1.py  test_runs_summary.py  test_sandbox.py  test_schemas.py  test_store.py  test_variant_folder_layout.py
ui/: __init__.py
(+97 files in other folders)
